# game_programming_course

./: .gitignore
assignments/assignment_1/: run.sh
assignments/assignment_1/src/: main.cpp
geometry_wars/: CMakeLists.txt  build.sh  config.txt
geometry_wars/include/: components.h  entities.h  entity_manager.h  game.h
geometry_wars/libs/imgui/: CMakeLists.txt
geometry_wars/src/: components.cpp  entities.cpp  entity_manager.cpp  game.cpp  main.cpp
lectures/lecture02/: a.out  lecture02.cpp
